--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,12 @@ spring.application.name=demo-swagger
 
 server.port=8080
 
-## swagger自定义配置
-springdoc.swagger-ui.path=/swagger-ui.html
+
+
+## 以下为swagger的自定义配置
+swagger.enable=true
+swagger.application-name=${spring.application.name}
+swagger.application-version=1.0
+swagger.applicationD-dscription=demo-swagger api info
+
+
