--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8080
 
 
 
-## 以下为swagger的自定义配置
-swagger.enable=true
+## 以下为swagger的自定义配置，true为开启，false为关闭
+swagger.enable=false
 swagger.application-name=${spring.application.name}
 swagger.application-version=1.0
 swagger.applicationD-dscription=demo-swagger api info
